--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
 	<img id="nemo" src="assets/sprites/nemo.png">
 	<img id="floor" src="assets/sprites/floor.png">
 	<img id="background" src="assets/sprites/background.png">
+	<img id="jesus" src="assets/sprites/jesus.png">
+	<img id="lemon" src="assets/sprites/lemon.png">
 </div>
 
 </body>
-<script src="assets/script.js"></script>
-<script src="assets/eventListener.js"></script>
+<script src="assets/gameMain/script.js"></script>
+<script src="assets/gameMain/eventListener.js"></script>
 <script src="assets/player.js"></script>
 <script src="assets/border.js"></script>
 <script src="assets/bullet.js"></script>
 <script src="assets/camera.js"></script>
-<script src="assets/map.js"></script>
+<script src="assets/gameMain/map.js"></script>
+<script src="assets/enemie.js"></script>
+<script src="assets/grenade.js"></script>
+<script src="assets/gameMain/functions.js"></script>
 </html>
