--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <body onload="startGame()">
 
-<canvas id="game" width="800" height="600"></canvas>
+<canvas id="game" width="600" height="300"></canvas>
 
 <div style="display: none;">
 	<img id="playerSprite" src="assets/sprites/pinguin.png">
@@ -17,7 +17,7 @@
 	<img id="nemo" src="assets/sprites/nemo.png">
 	<img id="floor" src="assets/sprites/floor.png">
 	<img id="background" src="assets/sprites/background.png">
-	<img id="jesus" src="assets/sprites/jesus.png">
+	<img id="jesus" src="assets/sprites/enemy.png">
 	<img id="lemon" src="assets/sprites/lemon.png">
 </div>
 
@@ -26,10 +26,10 @@
 <script src="assets/gameMain/eventListener.js"></script>
 <script src="assets/player.js"></script>
 <script src="assets/border.js"></script>
-<script src="assets/bullet.js"></script>
 <script src="assets/camera.js"></script>
 <script src="assets/gameMain/map.js"></script>
 <script src="assets/enemie.js"></script>
 <script src="assets/grenade.js"></script>
 <script src="assets/gameMain/functions.js"></script>
+<script src="assets/bullet.js"></script>
 </html>
